// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button brand renders correctly 1`] = `
<button
  className="root brand"
>
  Default button
</button>
`;

exports[`Button default renders correctly 1`] = `
<button
  className="root"
>
  Default button
</button>
`;
